merge from the 05pre3 branch